Added abstract and keywords to paper.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -38,16 +38,15 @@ Mathematics and Computer Science}
 \maketitle
 
 \begin{abstract}
-% TODO: rewrite (NB: max. 10 lines)
-%In modern computer hardware architecture, memory is organized in a hierarchy
-%consisting of several types of memory with different memory sizes, block
-%transfer sizes and access times. The cache-oblivious model has been proposed
-%to reflect this reality more accurately than traditional models. A number of
-%algorithms and data structures have been proposed that perform optimally in
-%this model. The goal of the proposed research project is to implement a
-%selection of cache-oblivious set-like data structures, evaluate their
-%performance (in terms of execution time and memory use) in a realistic
-%environment, and compare their performance to traditional data structures.
+In modern computer hardware architecture, memory is organized in a hierarchy
+consisting of several types of memory with different memory sizes, block
+transfer sizes and access times. To reflect this situation more accurately
+than tradition models, the cache-oblivious model has been proposed, and several
+algorithms and data structures have been proposed that perform optimally in
+this model.
+This paper presents the results of an emperical evaluation of various data
+structures in a realistic scenario, and gives insight into the applicability
+of cache-oblivious data structure in practice.
 \end{abstract}
 
 % TODO: update keywords?
