--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -508,16 +508,27 @@ are created atomically, so the state size is constant after initialization.
 % Present results!
 % Tables, graphs, etc.
 % What to include:
-%   per program:     transitions/states graph
-%   per program/set: 
+%   queue size over iterations
+%       for each program
 %
-%   
+%   insertions per query:
+%       for each program
+%
+%   per program:
+%       wctime over iterations
+%          for each set
+%       memory over iterations
+%          for each set
+%
+
 
 \section{Discussion}
 % Explain results, draw conclusions.
 
 \section{Conclusion}
 % Repeat findings.
+
+\include{fig-queuesize}
 
 \bibliographystyle{plain}
 \bibliography{paper}
