Added and updated a bunch of scripts.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -505,6 +505,20 @@ are created atomically, so the state size is constant after initialization.
 \end{itemize}
 
 \section{Results}
+
+\begin{figure}
+\centering
+\include{fig-eratosthenes-bender_wctime}
+\caption{Plot 1}\label{fig-eratosthenes-bender_wctime}
+\end{figure}
+
+\begin{figure}
+\centering
+\include{fig-eratosthenes-bender_vss}
+\caption{Plot 2}\label{fig-eratosthenes-bender_vss}
+\end{figure}
+
+
 % Present results!
 % Tables, graphs, etc.
 % What to include:
